Shrink the minimum height of the message center

New minimum height (77 dip) is matched for a single custom notification.

BUG=642804

Review-Url: https://codereview.chromium.org/2296863004
Cr-Commit-Position: refs/heads/master@{#417473}

Former-commit-id: e6dd1743c29c07fbbeee960f9d28f7960ab107b6